--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- checkout: self 
 - task: DotNetCoreCLI@2
   displayName: 'compiling'
   inputs:
